Zoom Clone Coding Start!

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -5,5 +5,11 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         title Noom
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body
-        h1 It works!
+        header
+            h1 Noom
+        main
+            h2 "Hello, Welcome to My world!"
+        button Call
+        script(src="/public/js/app.js")
