--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,12 @@ html(lang="en")
         header
             h1 Noom
         main
-            h2 "Hello, Welcome to My world!"
-        button Call
+            form#nick
+                input(type="text", placeholder="닉네임을 선택해주세요.", required)
+                button 닉네임 저장
+            ul
+            form#message
+                input(type="text", placeholder="메시지를 입력 해 주세요.", required)
+                button 보내기
+
         script(src="/public/js/app.js")
