WebSocket에서 Socket.io로 변경하여 Chat 구현하기. Socket.io 특징 1. WebSocket 보다 무겁지만 많은 기능을 제공하고 있음. 2. 연결이 끊기면 자동으로 연결요청 시도를 함. 3. WebSoket에서 일일히 구현했던 것을 Socket.io Framework가 제공을 한다.

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,12 +10,5 @@ html(lang="en")
         header
             h1 Noom
         main
-            form#nick
-                input(type="text", placeholder="닉네임을 선택해주세요.", required)
-                button 닉네임 저장
-            ul
-            form#message
-                input(type="text", placeholder="메시지를 입력 해 주세요.", required)
-                button 보내기
-
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
