--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,9 @@ html(lang="en")
         header
             h1 Noom
         main
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button 진입하기
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
