--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,7 +12,16 @@ html(lang="en")
         main
             div#welcome
                 form
-                    input(placeholder="room name", required, type="text")
+                    input#roomName(placeholder="room name", required, type="text")
+                    input#nickName(placeholder="nickname", required, type="text")
                     button 진입하기
+                h4 Open Rooms
+                ul
+            div#room
+                h3
+                ul
+                form#msg
+                    input(placeholder="message", required, type="text")
+                    button Send
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
