개발일지  webRTC(Real-Time communication)에 대해서 개발을 해봤다.
 카메라가 2개가 동시에 안나와서 지금 찾고 있다.

 ...

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,17 +11,15 @@ html(lang="en")
             h1 Noom
         main
             div#welcome
-                form
-                    input#roomName(placeholder="room name", required, type="text")
-                    input#nickName(placeholder="nickname", required, type="text")
-                    button 진입하기
-                h4 Open Rooms
-                ul
-            div#room
-                h3
-                ul
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
+                    form
+                        input(placeholder="room name", required, type="text")
+                        button Enter room
+            div#call
+                div#myStream
+                    video#myFace(autoplay, playsinline, width="300", height="400")
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras
+                div#peerFace(autoplay, playsinline, width="300", height="400")
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
